# yaml-recfmt

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
data/: invalid.yaml
examples/: input.yaml  output.yaml
src/: format.rs  lib.rs  main.rs  requote.rs
