[package]
name = "recursive-yaml-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
serde = "1.0.154"
serde_yaml = "0.9.19"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
