[package]
name = "yaml-recfmt"
version = "0.1.0"
edition = "2021"
description = "Recursively formats YAML files that contain strings that are also valid YAML"
authors = ["Rudi B. Svartveit <rudsvar@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
ignore = "0.4.20"
lazy_static = "1.4.0"
regex = "1.7.1"
serde = "1.0.154"
serde_yaml = "0.9.19"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
